discussion/kv_engine/170266/170266_rev45_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49512: FollyExecutorPool use custom queue for actual work

This is implemented by interposing our own queue of work underneath
the queue in the cpuPool to allow us to remove tasks from the queue
when we unregister a taskable (which will be done in a following
change). Now, when we schedule a task we enqueue it in a queue in a
custom executor and schedule a task on the base executor to pop a
task from the queue and run it.

Change-Id: Idcbf1737b80c3d3b92ed62adb3d4d164a2cf4266

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-02-17 12:47:01.000000000
Message: 
Uploaded patch set 45.
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-02-17 12:47:16.000000000
Message: 
Patch Set 45:

(5 comments)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-17 12:54:51.000000000
Message: 
Patch Set 45: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44018/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44018/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17752/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17752/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18467/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18467/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17431/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17431/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16494/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25834/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25834/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5386/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5386/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15676/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/cancellable_cpu_executor.cc:34:9: error: use of undeclared identifier "Expects" [clang-diagnostic-error]
        Expects(task);
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15676/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/cancellable_cpu_executor.cc:34:9:
error: use of undeclared identifier "Expects" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15676/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37103/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/executor/cancellable_cpu_executor.cc:34:9:
error: use of undeclared identifier "Expects"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37103/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5326/ : FAILURE

Compile error at [2022-02-17T12:49:19.287Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/executor/cancellable_cpu_executor.cc:34:9:
error: use of undeclared identifier "Expects"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5326/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14523/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
